# RecSysPlayground

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  setup.py  test_environment.py  tests.py
.dvc/: config
.github/workflows/: test.yml
data/interim/: .gitignore  5k_selected_items.csv.dvc  selected_interactions.csv.dvc
data/raw/: .gitignore  interactions.csv.dvc  items.csv.dvc  users.csv.dvc
docs/: conf.py  index.rst
frontend/: ipywidget_test.py  test_frontend_load.ipynb
notebooks/: 1_RecSys notebook EDA.ipynb  2_RecSys notebook Baseline.ipynb  3_check_cosine_recommender.ipynb  4_kinopoisk_posters.ipynb  5_my_notebook.ipynb  5_select_items.ipynb  6_select_items.ipynb  7_prepare_sample.ipynb  EDA_api_responses.ipynb
src/data/: data_prepare.py  kinopoisk_parsing.py  split_data.py
src/features/: utils.py
src/models/: pop_preds.csv  predict_model.py  run_experiment.py  train_model.py  utils.py
