[tool.poetry]
name = "recsysplayground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
implicit = "^0.7.2"
dvc = "^3.55.2"
dvc-s3 = "^3.2.0"
more-itertools = "^10.5.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
click = "^8.1.7"
pre-commit = "^3.8.0"
flake8 = "^7.1.1"
black = "^24.8.0"
voila = "^0.5.7"
mlflow = "^2.16.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
